app/assets/stylesheets/style.scss
/* ... */
.reply-comment h5 {
  font-size: 1.2em;
}

.reply-comment p {
  font-size: 0.6em;
  word-wrap: break-all;
  overflow: hidden;
}

.reply-block {
  border: 1px solid #e0e0e0;
  border-radius: 6px;
  padding: 20px;
}

/*========== devise ==========*/
#sign-in-block, #sign-up-block {
  padding-top: 40px;
  color: #fff
}

#sign-in-block h4,
#sign-up-block h4 {
  font-weight: 400;
  letter-spacing: -0.5px;
}

.devise-zone {
  padding: 20px;
  font-size: 14px;
  // background-color: #fff;
  border: 1px solid #d8dee2;
  border-radius: 10px;
}


#sign-in-block a,
#sign-up-block a {
  color: #0366d6;
}

.fab {
  position: relative;
  right: 20px;
  bottom: 1px;
  vertical-align: middle;
}

.btn-facebook {
  background: #4267b2;
  border-radius: 5px;
  color: white;
  height: 40px;
  text-align: center;
  overflow: hidden;
}

.btn-google {
  position: relative;
  background: #fff;
  border-radius: 5px;
  border: 1px solid #d8dee2;
  height: 40px;
  color: black;
  text-align: center;
  overflow: hidden;
}

.google_icon{
  position: relative;
  bottom: 3px;
  right: 30px;
}

/*=============user profile==============*/
.user-avatar{
  width: 250px;
  height: 250px;
  margin: 10px;
}

.user-profile{
  margin: 30px 0 0 0;
}

/*=============schedule search==============*/
.search-spot{
  max-width: 100%;
  height: 100%;
}

#map-bolck {
  position: relative;
  width: 100%;
  height: 100%;
  transition: 0.5s;
  // padding-right: 33.3333%;
}

#gmap-search-block {
  position: absolute;
  left: 13em;
  width: 43.33333%;
  top: 1em;
  z-index: 100;
}

#custom-search-input{
    border: solid 1px #E4E4E4;
    border-radius: 6px;
    background-color: #999;
    width: 100%;
    opacity: 0.8;
    margin-top: 10px;
}

#custom-search-input input{
    border: 0;
    box-shadow: none;
}

#custom-search-input span{
    margin: 2px 0 0 0;
    background: none;
    box-shadow: none;
    border: 0;
    color: #666666;
    padding: 5px 8px 0 5px;
    cursor: pointer;
}

#custom-search-input button:hover{
    border: 0;
    box-shadow: none;
    border-left: solid 1px #ccc;
}

.place-input {
  margin: 5px 0 0 0;
  min-height: 748px;
}


#map {
    position: relative;
    height: 100%;
    width: 66vw;
    margin: 0;
    padding: 0;
    z-index: 5;
}
#spot-pic{
   height: 300px;
   max-width: 100%;
}
#small-pic{
   height: 150px;
   max-width: 100%;
}
#web-link{
   color: inherit;
}

#hidden-btn{
   background-color: Transparent;
    background-repeat:no-repeat;
    border: none;
    cursor:pointer;
    overflow: hidden;
    outline:none;
}
.choses-item{
  height: 200px;
  overflow:auto;
}
.main-title{
  color: inherit;
}

.search-type li{
  float: left;
}
.overlay{
  background: rgba(0,0,0,0.5);
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

/*    gmap result items */
#sidebarCollapse {
  position: absolute;
  top: 3em;
  right: 34vw;
  z-index: 5;
  transition: 0.5s;
  padding: 1em 0.3em;
  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
  border-radius: 0;
}

#sideNav {
  padding-top: 20px;
  height: 93vh;
  color: #fff;
  font-size: 0.9em;
  // side nav
  width: 34vw;
  box-shadow: -10px 0 20px rgba(0, 0, 0, 0.3);
  position: fixed;
  // z-index: 3;
  top: 66px;
  right: 0;
  overflow-x: hidden;
  transition: 0.5s; 
}

#sidebarCollapse.active {
  right: 0;
}

.sort-button-list {
  padding-left: 20px;
  border-bottom: 1px solid #e0e0e0;
}


.results-list {
  position: relative;
  height: 62.2222vh;
  padding-left: 20px;
  overflow: scroll;
}

.results-items {
  position: relative;
  margin-bottom: 1em;
  // background-color: #fff;
}
.results-items .item-info {
  border-bottom: 1px solid #fff;
  padding-top: 8px;
  height: 100%;
}

.image-result img{
  width: 100%;
  display: block;
}

.image-result {
  height: 130px;
  margin-right: -10px;
}

footer {
  margin-left: 3em;
  margin-bottom: 1em;
}
/*=============new==============*/

.new-schedule {
  position: relative;
  padding-top: 1em;
}

.footer-menu{
  float: left;
  margin: 20px 10px 20px 10px;

}
#review-pic {
  width: 22.222%;
  height: 40%;
  position: fixed;
  top: 20%;
  text-align: center;
  padding-top: 1em;
}

#review-block {
  background-color: rgba(11, 7, 13, 0.69);
  -moz-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
  -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
  box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
  height: 100%;
}

#revie-title {
  color: #fff;
  font-size: 1.2em;
  width: 100%;
}
#review-item{
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.lists {
  position: relative;
}

.manage-list{
  width: 100%;
  padding: 0px 10px;
}

.manage-list .days-item {
  margin: 0.4em 1em; 
}

.manage-list a {
  display: block;
}

.title{
      padding-left: 20px;
      padding-bottom: 15px;
}
.review-img{
   height: 100%;
   max-width: 100%;
}
.note-text{
  white-space: nowrap;
}
.footer-btn{
  text-align:right;
  width: 100%;
}

.ph-btn-grey {

     background-color: #C6CCD2;
     border-color: #AAB3BB;
}
.ph-btn-grey:hover, .ph-btn-grey:focus, .ph-btn-grey:active {
    background-color: #B8BFC7;
    border-color: #AAB3BB;
}
a.tbtn {
	display: inline-block;
	color: #666;
	background-color: #eee;
	text-transform: uppercase;
	letter-spacing: 2px;
	font-size: 12px;
	padding: 10px 30px;
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border: 1px solid rgba(0,0,0,0.3);
	border-bottom-width: 3px;
}

a.tbtn.btn-blue {
	background-color: #699DB6;
	border-color: rgba(0,0,0,0.3);
	text-shadow: 0 1px 0 rgba(0,0,0,0.5);
	color: #FFF;
}

	a.tbtn.btn-blue:hover {
		background-color: #4F87A2;
		border-color: rgba(0,0,0,0.5);
	}

	a.tbtn.btn-blue:active {
		background-color: #3C677B;
		border-color: rgba(0,0,0,0.9);
	}




/*  bhoechie tab */

.itme-text{
  color: #5577a3;
}
/* ... */

